<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- REPEATING FEATURES -->
    <string name="mainmenu_btn">Main Menu</string>
    <string name="project_prompt">Project List</string>
    <string-array name="todo_arrays">
        <item>Project 1</item>
        <item>Project 2</item>
        <item>Project 3</item>
        <item>Project 4</item>
        <item>Project 5</item>
    </string-array>

    <!-- ACTION BAR MENU -->
    <string name="app_name">Personal Data Assistant</string>
    <string name="ui_action_settings">Settings</string>
    <string name="ui_action_help">Help</string>
    <string name="ui_action_exit">Exit</string>

    <!-- WELCOME SCREEN -->
    <string name="welcome_screen">Welcome</string>
    <string name="main_screen">Main</string>
    <string name="enter_btn">Enter</string>

    <!-- MAIN ACTIVITY -->
    <string name="todo">To-Do</string>
    <string name="work_hours">Work Hours</string>
    <string name="expenses">Expenses</string>
    <string name="invoice">Invoice</string>
    <string name="back_btn">Back</string>
    <string name="back_info">Go back to welcome screen</string>

    <!-- TO-DO ACTIVITY -->
    <string name="todo_info">This is the to-do information</string>
    <string name="newproject_btn">New Project</string>
    <string name="newtask_btn">New Task</string>
    <string name="createproject_btn">Create Project</string>
    <string name="add">Add TO-DO Item</string>
    <string name="delete">Clear all TO-DOs</string>

    <!-- WORK HOURS ACTIVITY -->
    <string name="workhours_info">Work Description</string>
    <string name="list_box1">List Box</string>
    <string name="record_btn1">Record Time</string>
    <string name="starttime_prompt">Start Time</string>
    <string name="endtime_prompt">End Time</string>
    <string-array name="starttime_arrays">
        <item>Start Time 1</item>
        <item>Start Time 2</item>
        <item>Start Time 3</item>
        <item>Start Time 4</item>
        <item>Start Time 5</item>
    </string-array>
    <string-array name="endtime_arrays">
        <item>End Time 1</item>
        <item>End Time 2</item>
        <item>End Time 3</item>
        <item>End Time 4</item>
        <item>End Time 5</item>
    </string-array>

    <!-- EXPENSES ACTIVITY -->
    <string name="expenses_info">Expense Description</string>
    <string name="expenses_amount">Expense Amount</string>
    <string name="list_box2">List Box</string>
    <string name="record_btn2">Record Expense</string>

    <!-- INVOICE ACTIVITY -->
    <string name="invoice_info">This is the invoice information</string>
    <string name="createinvoice_btn">Create Invoice</string>
    <string name="daterange_prompt">Date Range</string>
    <string-array name="daterange_arrays">
        <item>Date Range 1</item>
        <item>Date Range 2</item>
        <item>Date Range 3</item>
        <item>Date Range 4</item>
        <item>Date Range 5</item>
    </string-array>

    <!-- INVOICE REPORT ACTIVITY -->
    <string name="invoicereport_info">This is the invoice report information</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings_info">This is the settings information</string>

    <!-- HELP ACTIVITY -->
    <string name="help_info">This is the help information</string>

    <!-- EXIT ACTIVITY -->
    <string name="exit_question">Are you sure?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>

</resources>
