<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:text="@string/invoicereport_info"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView5"
        android:background="@drawable/button"
        android:contentDescription="@string/back_info"
        android:onClick="goBack"
        android:text="@string/back_btn"/>

</RelativeLayout>
