<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/todo_arrays"
        android:prompt="@string/project_prompt"
        style="@android:style/Widget.Spinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses_info"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_below="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_below="@id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses_amount"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_below="@id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/record_btn2"
        android:id="@+id/button14"
        android:background="@drawable/button"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/button14"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/list_box2"
        android:id="@+id/listView2"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@color/red"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/listView2"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/mainmenu_btn"
        android:onClick="goBack"
        android:text="@string/mainmenu_btn" />


</RelativeLayout>
