<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/todo"
        android:contentDescription="@string/todo"
        android:onClick="goToDo" />

    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:text="@string/work_hours"
        android:contentDescription="@string/work_hours"
        android:onClick="goWorkHours" />

    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/expenses"
        android:contentDescription="@string/expenses"
        android:onClick="goExpenses" />

    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/invoice"
        android:contentDescription="@string/invoice"
        android:onClick="goInvoice" />

    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:id="@+id/button6"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back_btn" />

</RelativeLayout>
