<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#369636" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/todo_arrays"
        android:prompt="@string/project_prompt"
        style="@android:style/Widget.Spinner" />


    <EditText
        android:id="@+id/editText1"
        android:layout_below="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:background="@drawable/button"
        android:contentDescription="@string/newproject_btn"
        android:onClick="NewProjectOnClick"
        android:text="@string/newproject_btn" />

    <Button
        android:id="@+id/button9"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:background="@drawable/button"
        android:contentDescription="@string/newtask_btn"
        android:onClick="NewTaskOnClick"
        android:text="@string/newtask_btn" />

</RelativeLayout>
